# pico2-rs-sensor-display

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: devcontainer_ci.yml  release.yml
src/: main.rs
