
[package]
edition = "2024"
name = "pico2-rs-sensor-display"
version = "0.1.0"
license = "MIT or Apache-2.0"

[build-dependencies]
regex = "1.11.0"

[dependencies]
# Embassy core
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5", features = ["defmt"] }
embassy-rp = { version = "0.9", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
] }
embassy-embedded-hal = "0.3"
embassy-sync = "0.6"

# Networking
embassy-net = { version = "0.7", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "dhcpv4-hostname",
    "dns",
] }
cyw43 = { version = "0.6", features = ["defmt"] }
cyw43-pio = { version = "0.9", features = ["defmt"] }

# Utilities
static_cell = "2.1"
defmt = { version = "1", features = ["encoding-rzcobs"] }
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-io-async = "0.6"
heapless = "0.8"

# Display and sensors
ssd1306 = "0.9"
embedded-graphics = "0.8"
bme280 = "0.5"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2"
embedded-hal-async = "1.0.0"

[profile.release]
lto = true
opt-level = "s"
